網址切換成正式網址，做一些小修改。

--- a/src/components/Act.astro
+++ b/src/components/Act.astro
@@ -7,7 +7,7 @@ import ActRemind from "./ActRemind.astro";
 import Actpopup from "./ActPopup.astro";
 ---
 
-<section class="act">
+<section class="act" id="actInfo">
   <div class="act__container">
     <img class="act__title" src="/image/act_title.svg" alt="act_title" />
     <section class="act__content">
