--- a/src/components/ActPopup.astro
+++ b/src/components/ActPopup.astro
@@ -92,7 +92,7 @@
     // 個資聲明彈窗
     privacyBtn?.addEventListener("click", function () {
       showModal(
-        "https://lab-event.udn.com/bd_500bowls_vote2025_test/image/personinfo_title.svg",
+        "https://event.udn.com/bd_500bowls_vote2025/image/personinfo_title.svg",
         getPrivacyContent()
       );
     });
@@ -100,7 +100,7 @@
     // 注意事項彈窗
     noticeBtn?.addEventListener("click", function () {
       showModal(
-        "https://lab-event.udn.com/bd_500bowls_vote2025_test/image/information_title.svg",
+        "https://event.udn.com/bd_500bowls_vote2025/image/information_title.svg",
         getNoticeContent()
       );
     });
@@ -195,7 +195,7 @@
       const closeButton = document.createElement("button");
       closeButton.className = "modal-close-btn";
       closeButton.id = "close-modal";
-      closeButton.innerHTML = `<img src="https://lab-event.udn.com/bd_500bowls_vote2025_test/image/close_btn.svg" alt="關閉" style="width: 100%; height: 100%;" />`;
+      closeButton.innerHTML = `<img src="https://event.udn.com/bd_500bowls_vote2025/image/close_btn.svg" alt="關閉" style="width: 100%; height: 100%;" />`;
       closeButton.style.cssText = `
         background: transparent;
         border: none;
