--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -23,7 +23,7 @@ import { pgwWrap } from "../js/pgw.js";
       <ul>
         <li><a href="/#food-header">投票</a></li>
         <li class="divider">｜</li>
-        <li><a href="/rules">活動辦法</a></li>
+        <li><a href="/rules/#actInfo">活動辦法</a></li>
         <li class="divider">｜</li>
         <li>
           <a
