--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -24,7 +24,7 @@ import "../styles/global.css";
     />
     <meta
       property="og:image"
-      content="https://lab-event.udn.com/bd_500bowls_vote2025_test/image/metaimg.png"
+      content="https://event.udn.com/bd_500bowls_vote2025/image/metaimg.png"
     />
     <meta property="og:url" content="https://event.udn.com/bd_500bowls_vote2025" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
